k8s/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-web
  template:
    metadata:
      labels:
        app: php-web
    spec:
      containers:
        - name: php-web-container
          image: ayush2326/php-web:v5
          ports:
            - containerPort: 9000  
#          volumeMounts:
#            - name: web-content
#              mountPath: /var/www/html
#
#        - name: nginx
#          image: ayush2326/nginx:app
#          ports:
#            - containerPort: 80 
#          volumeMounts:
#            - name: web-content
#              mountPath: /usr/share/nginx/html
#
#      volumes:
#        - name: web-content
#          emptyDir: {}
#
