k8s/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-web-service
spec:
  selector:
    app: php-web
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8000
  type: LoadBalancer
