k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-app
  namespace: default
spec:
  rules:
  - host: 135.237.2.214.nip.io
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-web-service
            port:
              number: 80
